--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,18 @@
 {
-    "compilerOptions" : {
-        "target" : "ES6",
-        "module" : "ESNext",
-        "moduleResolution" : "node",
-        "esModuleInterop" : true,
-        "strict" : true,
-        "skipLibCheck" : true,
-    }
+  "compilerOptions": {
+
+    "target": "es6",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+
+    "module": "ESNext",                                /* Specify what module code is generated. */
+   
+    "moduleResolution": "node",
+
+    "esModuleInterop": true,
+
+    "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
+  
+    "strict": true,                                      /* Enable all strict type-checking options. */
+
+    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+  }
 }
