--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "go-server",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "awesome-typescript-loader": "5.2.1",
+    "css-loader": "6.8.1",
+    "html-webpack-plugin": "5.5.3",
+    "style-loader": "3.3.3",
+    "ts-loader": "9.5.1",
+    "webpack": "5.89.0",
+    "webpack-cli": "5.1.4"
   }
 }
