--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
   
     "strict": true,                                      /* Enable all strict type-checking options. */
 
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
+
+    "sourceMap": true
   }
 }
