--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "awesome-typescript-loader": "5.2.1",
+    "babel-loader": "^9.1.3",
     "css-loader": "6.8.1",
     "html-webpack-plugin": "5.5.3",
     "style-loader": "3.3.3",
     "ts-loader": "9.5.1",
-    "webpack": "5.89.0",
+    "webpack": "^5.89.0",
     "webpack-cli": "5.1.4"
   }
 }
